// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildkite-graph continue on failure JSON multiple subsequent always-executed subsequent steps do not get an additional wait step 1`] = `
Object {
  "env": undefined,
  "steps": Array [
    Object {
      "command": "command.sh",
      "label": undefined,
      "plugins": undefined,
      "timeout": undefined,
    },
    Object {
      "continue_on_failure": true,
      "wait": null,
    },
    Object {
      "command": "echo This runs regardless of the success or failure",
      "label": undefined,
      "plugins": undefined,
      "timeout": undefined,
    },
    Object {
      "command": "echo This runs regardless of the success or failure 2",
      "label": undefined,
      "plugins": undefined,
      "timeout": undefined,
    },
    Object {
      "command": "echo This runs regardless of the success or failure 3",
      "label": undefined,
      "plugins": undefined,
      "timeout": undefined,
    },
  ],
}
`;

exports[`buildkite-graph continue on failure JSON subsequent depending steps that are not always executed get an additional wait step 1`] = `
Object {
  "env": undefined,
  "steps": Array [
    Object {
      "command": "command.sh",
      "label": undefined,
      "plugins": undefined,
      "timeout": undefined,
    },
    Object {
      "continue_on_failure": true,
      "wait": null,
    },
    Object {
      "command": "echo This runs regardless of the success or failure",
      "label": undefined,
      "plugins": undefined,
      "timeout": undefined,
    },
    Object {
      "continue_on_failure": undefined,
      "wait": null,
    },
    Object {
      "command": "echo The command passed",
      "label": undefined,
      "plugins": undefined,
      "timeout": undefined,
    },
  ],
}
`;

exports[`buildkite-graph continue on failure YAML multiple subsequent always-executed subsequent steps do not get an additional wait step 1`] = `
"steps:
  - command: command.sh
  - wait: ~
    continue_on_failure: true
  - command: echo This runs regardless of the success or failure
  - command: echo This runs regardless of the success or failure 2
  - command: echo This runs regardless of the success or failure 3
"
`;

exports[`buildkite-graph continue on failure YAML subsequent depending steps that are not always executed get an additional wait step 1`] = `
"steps:
  - command: command.sh
  - wait: ~
    continue_on_failure: true
  - command: echo This runs regardless of the success or failure
  - wait: ~
  - command: echo The command passed
"
`;

exports[`buildkite-graph continue on failure dot multiple subsequent always-executed subsequent steps do not get an additional wait step 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<command.sh>\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"<echo This runs regardless of the success or failure>\\" [ color = \\"grey\\" ];
  \\"<echo This runs regardless of the success or failure 2>\\" [ color = \\"grey\\" ];
  \\"<echo This runs regardless of the success or failure 3>\\" [ color = \\"grey\\" ];
}

  \\"<command.sh>\\";
  \\"<echo This runs regardless of the success or failure>\\";
  \\"<echo This runs regardless of the success or failure 2>\\";
  \\"<echo This runs regardless of the success or failure 3>\\";
  \\"<command.sh>\\" -> \\"<echo This runs regardless of the success or failure>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"<command.sh>\\" -> \\"<echo This runs regardless of the success or failure 2>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"<command.sh>\\" -> \\"<echo This runs regardless of the success or failure 3>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
}
"
`;

exports[`buildkite-graph continue on failure dot subsequent depending steps that are not always executed get an additional wait step 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<command.sh>\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"<echo This runs regardless of the success or failure>\\" [ color = \\"grey\\" ];
  \\"<echo The command passed>\\" [ color = \\"grey\\" ];
}

  \\"<command.sh>\\";
  \\"<echo This runs regardless of the success or failure>\\";
  \\"<echo The command passed>\\";
  \\"<command.sh>\\" -> \\"<echo This runs regardless of the success or failure>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"<command.sh>\\" -> \\"<echo The command passed>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
}
"
`;

exports[`buildkite-graph general serialization JSON complex 1`] = `
Object {
  "env": undefined,
  "steps": Array [
    Object {
      "command": "web/bin/buildkite/run_web_step.sh build editor",
      "label": "Build Editor",
      "plugins": undefined,
      "timeout": undefined,
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh test editor",
      "label": "Test Editor",
      "plugins": undefined,
      "timeout": undefined,
    },
    Object {
      "continue_on_failure": true,
      "wait": null,
    },
    Object {
      "label": "Annotate failures",
      "plugins": Array [
        Object {
          "bugcrowd/test-summary#v1.5.0": Object {
            "inputs": Array [
              Object {
                "artifact_path": "web/target/htmllint-*.txt",
                "label": ":htmllint: HTML lint",
                "type": "oneline",
              },
            ],
          },
        },
        Object {
          "detect-clowns#v1.0.0": null,
        },
      ],
      "timeout": undefined,
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh deploy-report coverage editor",
      "label": "Upload coverage",
      "plugins": undefined,
      "timeout": undefined,
    },
    Object {
      "continue_on_failure": undefined,
      "wait": null,
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh run-integration-tests local editor chrome",
      "label": "Integration tests",
      "parallelism": 8,
      "plugins": undefined,
      "timeout": undefined,
    },
    Object {
      "continue_on_failure": undefined,
      "wait": null,
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh run-integration-tests saucelabs editor safari",
      "label": ":saucelabs: Integration tests",
      "parallelism": 8,
      "plugins": undefined,
      "timeout": undefined,
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh run-visual-regression editor",
      "label": "Visreg baseline update",
      "plugins": undefined,
      "timeout": undefined,
    },
    Object {
      "continue_on_failure": undefined,
      "wait": null,
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh copy-to-deploy-bucket editor",
      "label": "Copy to deploy bucket",
      "plugins": undefined,
      "timeout": undefined,
    },
    Object {
      "continue_on_failure": undefined,
      "wait": null,
    },
    Object {
      "command": "production/test/jobs/advance_branch.sh \\"checkpoint/web/green/editor\\"",
      "label": "Update checkpoint",
      "plugins": undefined,
      "timeout": undefined,
    },
    Object {
      "build": Object {
        "env": Object {
          "FLAVOR": "tech",
          "RELEASE_PATH": "some/path/",
        },
      },
      "trigger": "web-deploy",
    },
    Object {
      "build": Object {
        "env": Object {
          "FLAVOR": "usertesting",
          "RELEASE_PATH": "some/path/",
        },
      },
      "trigger": "web-deploy",
    },
  ],
}
`;

exports[`buildkite-graph general serialization JSON simple 1`] = `
Object {
  "env": Object {
    "DEBUG": true,
    "USE_COLOR": 1,
  },
  "steps": Array [
    Object {
      "command": "buildkite/deploy_web.sh",
      "label": "Deploy",
      "plugins": undefined,
      "timeout": undefined,
    },
  ],
}
`;

exports[`buildkite-graph general serialization YAML complex 1`] = `
"steps:
  - label: Build Editor
    command: web/bin/buildkite/run_web_step.sh build editor
  - label: Test Editor
    command: web/bin/buildkite/run_web_step.sh test editor
  - wait: ~
    continue_on_failure: true
  - label: Annotate failures
    plugins:
      - 'bugcrowd/test-summary#v1.5.0':
          inputs:
            - label: ':htmllint: HTML lint'
              artifact_path: web/target/htmllint-*.txt
              type: oneline
      - 'detect-clowns#v1.0.0': ~
  - label: Upload coverage
    command: web/bin/buildkite/run_web_step.sh deploy-report coverage editor
  - wait: ~
  - label: Integration tests
    command: >-
      web/bin/buildkite/run_web_step.sh run-integration-tests local editor
      chrome
    parallelism: 8
  - wait: ~
  - label: ':saucelabs: Integration tests'
    command: >-
      web/bin/buildkite/run_web_step.sh run-integration-tests saucelabs editor
      safari
    parallelism: 8
  - label: Visreg baseline update
    command: web/bin/buildkite/run_web_step.sh run-visual-regression editor
  - wait: ~
  - label: Copy to deploy bucket
    command: web/bin/buildkite/run_web_step.sh copy-to-deploy-bucket editor
  - wait: ~
  - label: Update checkpoint
    command: production/test/jobs/advance_branch.sh \\"checkpoint/web/green/editor\\"
  - trigger: web-deploy
    build:
      env:
        FLAVOR: tech
        RELEASE_PATH: some/path/
  - trigger: web-deploy
    build:
      env:
        FLAVOR: usertesting
        RELEASE_PATH: some/path/
"
`;

exports[`buildkite-graph general serialization YAML simple 1`] = `
"env:
  USE_COLOR: 1
  DEBUG: true
steps:
  - label: Deploy
    command: buildkite/deploy_web.sh
"
`;

exports[`buildkite-graph general serialization dot complex 1`] = `
"digraph \\"web-build-editor\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"Build Editor\\" [ color = \\"grey\\" ];
  \\"Test Editor\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"Annotate failures\\" [ color = \\"grey\\" ];
  \\"Upload coverage\\" [ color = \\"grey\\" ];
  \\"Integration tests\\" [ color = \\"grey\\" ];
}

subgraph cluster_2 {
  graph [ color = \\"black\\" ];
  \\":saucelabs: Integration tests\\" [ color = \\"grey\\" ];
  \\"Visreg baseline update\\" [ color = \\"grey\\" ];
}

subgraph cluster_3 {
  graph [ color = \\"black\\" ];
  \\"Copy to deploy bucket\\" [ color = \\"grey\\" ];
}

subgraph cluster_4 {
  graph [ color = \\"black\\" ];
  \\"Update checkpoint\\" [ color = \\"grey\\" ];
  \\"Deploy to tech\\" [ color = \\"grey\\" ];
  \\"Deploy to usertesting\\" [ color = \\"grey\\" ];
}

  \\"Test Editor\\";
  \\"Annotate failures\\";
  \\"Upload coverage\\";
  \\"Build Editor\\";
  \\"Integration tests\\";
  \\":saucelabs: Integration tests\\";
  \\"Visreg baseline update\\";
  \\"Copy to deploy bucket\\";
  \\"Update checkpoint\\";
  \\"Deploy to tech\\";
  \\"web-deploy\\" [ shape =Msquare ];
  \\"Deploy to usertesting\\";
  \\"Test Editor\\" -> \\"Annotate failures\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"Test Editor\\" -> \\"Upload coverage\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"Build Editor\\" -> \\"Integration tests\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"Integration tests\\" -> \\":saucelabs: Integration tests\\" [ ltail = \\"cluster_1\\", lhead = \\"cluster_2\\" ];
  \\"Integration tests\\" -> \\"Visreg baseline update\\" [ ltail = \\"cluster_1\\", lhead = \\"cluster_2\\" ];
  \\":saucelabs: Integration tests\\" -> \\"Copy to deploy bucket\\" [ ltail = \\"cluster_2\\", lhead = \\"cluster_3\\" ];
  \\"Copy to deploy bucket\\" -> \\"Update checkpoint\\" [ ltail = \\"cluster_3\\", lhead = \\"cluster_4\\" ];
  \\"Copy to deploy bucket\\" -> \\"Deploy to tech\\" [ ltail = \\"cluster_3\\", lhead = \\"cluster_4\\" ];
  \\"Deploy to tech\\" -> \\"web-deploy\\" [ label = \\"triggers\\" ];
  \\"Copy to deploy bucket\\" -> \\"Deploy to usertesting\\" [ ltail = \\"cluster_3\\", lhead = \\"cluster_4\\" ];
  \\"Deploy to usertesting\\" -> \\"web-deploy\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph general serialization dot simple 1`] = `
"digraph \\"web-deploy\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"Deploy\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph timeouts JSON commands with timeouts set step timeout total 1`] = `
Object {
  "env": undefined,
  "steps": Array [
    Object {
      "command": Array [
        "yarn install",
        "yarn test",
      ],
      "label": undefined,
      "plugins": undefined,
      "timeout": 20,
    },
  ],
}
`;

exports[`buildkite-graph timeouts JSON one infinite timeout will cancel out the others 1`] = `
Object {
  "env": undefined,
  "steps": Array [
    Object {
      "command": Array [
        "yarn install",
        "yarn test",
      ],
      "label": undefined,
      "plugins": undefined,
      "timeout": undefined,
    },
  ],
}
`;

exports[`buildkite-graph timeouts JSON step timeout total trumps commands 1`] = `
Object {
  "env": undefined,
  "steps": Array [
    Object {
      "command": Array [
        "yarn install",
        "yarn test",
      ],
      "label": undefined,
      "plugins": undefined,
      "timeout": 2,
    },
  ],
}
`;

exports[`buildkite-graph timeouts YAML commands with timeouts set step timeout total 1`] = `
"steps:
  - command:
      - yarn install
      - yarn test
    timeout: 20
"
`;

exports[`buildkite-graph timeouts YAML one infinite timeout will cancel out the others 1`] = `
"steps:
  - command:
      - yarn install
      - yarn test
"
`;

exports[`buildkite-graph timeouts YAML step timeout total trumps commands 1`] = `
"steps:
  - command:
      - yarn install
      - yarn test
    timeout: 2
"
`;

exports[`buildkite-graph timeouts dot commands with timeouts set step timeout total 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn install && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph timeouts dot one infinite timeout will cancel out the others 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn install && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph timeouts dot step timeout total trumps commands 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn install && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;
